--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -12,22 +12,9 @@
   right: 0;
   text-align: center;
   display: flex;
-  /* align-items: center; */
 }
 
 .services .gallery-item {
-  /* height: 60%;
-  opacity: 0;
-  position: absolute;
-  transition: all 0.3s ease-in-out;
-  width: 25%;
-  z-index: 1;
-  background-color: #f87a7a;
-  border-radius: 10px;
-  border: 1px solid #ececec;
-  box-shadow: 0 0 2px rgba(33, 33, 33, .2); */
-
-  /* height: 60%; */
   opacity: 0;
   position: absolute;
   width: 25%;
@@ -219,7 +206,8 @@
 
 @media (max-width: 991px) {
   .services .gallery {
-    padding-top: 40%;
+    padding-top: 100%;
+    background-color: rgb(207, 24, 85);
   }
 
   .services .gallery-item {
@@ -237,15 +225,21 @@
 
   .services .gallery-item.gallery-item-selected {
     width: 80%;
+    margin-top: 10px;
+  }
+
+  .services .gallery-item-container {
+    bottom: 10px;
   }
 
   .services .gallery-controls {
-    width: 84%;
-    left: 8%;
+    width: 96%;
+    left: 2%;
   }
 
   .services .gallery-item img {
-    max-width: 35%;
+    /* max-width: 35%; */
+    /* width: 35%; */
   }
 
   .services .gallery-item-content {
@@ -254,8 +248,8 @@
   
 }
 
-@media (max-width: 321px) {
+@media (max-width: 324px) {
   .services .gallery {
-    padding-top: 47%;
+    padding-top: 160%;
   }
 }
