--- a/assets/css/servicesCarousel.css
+++ b/assets/css/servicesCarousel.css
@@ -60,7 +60,8 @@
   display: flex;
   align-items: flex-end;
   margin-right: 4%;
-  font-size: 1.5vw;
+  font-size: 16px;
+  /* font-size: 1.5vw; */
   /* height: 75%; */
   margin-bottom: 0px;
   font-weight: bold;
@@ -72,7 +73,8 @@
   padding-left: 20px;
   padding-right: 20px;
   text-align: center;
-  font-size: 1vw;
+  font-size: 10px;
+  /* font-size: 1vw; */
   color: #66757f;
 }
 
@@ -202,6 +204,12 @@
 
 .services .gallery-nav li.gallery-item-selected {
   background: #555;
+}
+
+@media (max-width: 1400px) and (min-width: 992px)  {
+  .services .gallery {
+    padding-top: 36%;
+  }
 }
 
 @media (max-width: 991px) {
