--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1227,7 +1227,7 @@ a:hover {
       font-size: 20px;
     }
 
-    .pricing ul {
+    /* .pricing ul {
       columns: 2;
       display: flex;
       flex-direction: row;
@@ -1239,7 +1239,7 @@ a:hover {
 
     .pricing ul li {
       width: 50%;
-    }
+    } */
 
     .pricing .box {
       width: auto;
@@ -1247,15 +1247,14 @@ a:hover {
   }
 
   @media (max-width: 573px) {
-    .pricing .box {
-      width: 90%;
+    .pricing .pricingBoxCotent {
+      width: 80%;
     }
 
-    /* .test {
+    .pricingItemGroup {
       display: flex;
-      flex-direction: column;
-      align-items: center;
-    } */
+      justify-content: center;
+    }
   }
   
   /*--------------------------------------------------------------
