--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -392,6 +392,8 @@ a:hover {
 
   #banner .tryNowBtn:hover {
     color: #1976D2;
+    /* box-shadow: 0 2px 5px#83a6cc;
+    border-radius: 50%; */
   }
   
   #banner p {
@@ -725,19 +727,25 @@ a:hover {
     text-align: center;
   }
 
+  .features .fontBold {
+    font-weight: 600;
+  }
+
   .features a {
     display: flex;
     flex-direction: column;
     border-radius: 10px;
-    border: 3px solid #ffffff;
+    /* border: 1px solid rgba(216, 215, 215, 0.4); */
     transition: all 0.4s ease-in-out;
     width: 120px;
     margin-left: 20px;
     margin-top: 20px;
+    box-shadow: 0 0 5px rgba(139, 139, 139, 0.2);
   }
 
   .features a:hover {
-    box-shadow: 0 2px 5px#1976D2;
+    /* box-shadow: 0 2px 5px#1976D2; */
+    box-shadow: 0 0 20px rgba(33, 33, 33, .2);
   }
 
   .features img {
