--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -380,20 +380,32 @@ a:hover {
       margin-left: 15px;
   }
 
-  #banner a {
+  /* #banner a {
     color: #8b8f94;
-  }
+  } */
 
   #banner .tryNowBtn {
+    color: #8b8f94;
     font-size: 30px;
     position: relative;
     top: 20%;
+    -webkit-animation: blinking 1s infinite;  /* Safari 4+ */
+    -moz-animation: blinking 1s infinite;  /* Fx 5+ */
+    -o-animation: blinking 1s infinite;  /* Opera 12+ */
+    animation: blinking 1s infinite;  /* IE 10+, Fx 29+ */
   }
 
   #banner .tryNowBtn:hover {
     color: #1976D2;
-    /* box-shadow: 0 2px 5px#83a6cc;
-    border-radius: 50%; */
+  }
+
+  @keyframes blinking {
+    50% {
+      color: #1976D2;
+    }
+  }
+
+  @-webkit-keyframes blinking {
   }
   
   #banner p {
