--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,13 @@
+
+@font-face {
+  font-family: 'Lato-Regular';
+  src: url('../../assets/fonts/Lato-Regular.ttf');
+}
+
 /* General */
 body {
-    font-family: "Open Sans", sans-serif;
+    /* font-family: "Open Sans", sans-serif; */
+    font-family: Lato-Regular, sans-serif;
 }
 
 a {
@@ -172,7 +179,6 @@ a:hover {
     padding: 0px 5px;
     transition: 0.3s;
     font-size: 14px;
-    font-family: "Open Sans", sans-serif;
   }
   
   /* .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a { */
@@ -253,7 +259,6 @@ a:hover {
   
   .nav-menu .drop-down .drop-down > a:after {
     content: "\eaa0";
-    font-family: IcoFont;
     position: absolute;
     right: 15px;
   }
@@ -374,6 +379,10 @@ a:hover {
     margin: 30px auto 0 auto;
     font-weight: bold;
     font-size: 18px;
+    
+    display: flex;
+    flex-direction: row;
+    align-items: center;
   }
 
   #banner .dotLineArrow {
@@ -387,8 +396,9 @@ a:hover {
   #banner .tryNowBtn {
     color: #8b8f94;
     font-size: 30px;
-    position: relative;
-    top: 20%;
+    /* position: relative;
+    top: 20%; */
+    margin-left: 4px;
     border-radius: 50%;
     -webkit-animation: blinking 1s infinite;  /* Safari 4+ */
     -moz-animation: blinking 1s infinite;  /* Fx 5+ */
@@ -612,7 +622,6 @@ a:hover {
     letter-spacing: 2px;
     text-transform: uppercase;
     color: #aaaaaa;
-    font-family: "Poppins", sans-serif;
   }
   
   .section-title h2::after {
@@ -630,110 +639,8 @@ a:hover {
     font-size: 36px;
     font-weight: 700;
     text-transform: uppercase;
-    font-family: "Poppins", sans-serif;
     color: #2a2c39;
   }
-  
-  /*--------------------------------------------------------------
-  # About
-  --------------------------------------------------------------*/
-  /* .about {
-    padding-top: 80px;
-  }
-  
-  .about .content h3 {
-    font-weight: 600;
-    font-size: 26px;
-  }
-  
-  .about .content ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .about .content ul li {
-    padding-left: 28px;
-    position: relative;
-  }
-  
-  .about .content ul li + li {
-    margin-top: 10px;
-  }
-  
-  .about .content ul i {
-    position: absolute;
-    left: 0;
-    top: 2px;
-    font-size: 20px;
-    color: #ef6603;
-    line-height: 1;
-  }
-  
-  .about .content p:last-child {
-    margin-bottom: 0;
-  }
-  
-  .about .content .btn-learn-more {
-    font-family: "Raleway", sans-serif;
-    font-weight: 600;
-    font-size: 14px;
-    letter-spacing: 1px;
-    display: inline-block;
-    padding: 12px 32px;
-    border-radius: 5px;
-    transition: 0.3s;
-    line-height: 1;
-    color: #ef6603;
-    -webkit-animation-delay: 0.8s;
-    animation-delay: 0.8s;
-    margin-top: 6px;
-    border: 2px solid #ef6603;
-  }
-  
-  .about .content .btn-learn-more:hover {
-    background: #ef6603;
-    color: #fff;
-    text-decoration: none;
-  } */
-  
-  /*--------------------------------------------------------------
-  # Features
-  --------------------------------------------------------------*/
-  /* .features .nav-tabs {
-    border: 0;
-  } */
-  
-  /* .features .nav-link {
-    border: 1px solid #d4d6df;
-    padding: 15px;
-    transition: 0.3s;
-    color: #2a2c39;
-    border-radius: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .features .nav-link i {
-    padding-right: 15px;
-    font-size: 48px;
-  }
-  
-  .features .nav-link h4 {
-    font-size: 18px;
-    font-weight: 600;
-    margin: 0;
-  }
-  
-  .features .nav-link:hover {
-    color: #ef6603;
-  }
-  
-  .features .nav-link.active {
-    background: #ef6603;
-    color: #fff;
-    border-color: #ef6603;
-  } */
 
   .features p {
     text-align: center;
@@ -840,216 +747,6 @@ a:hover {
     /* padding-top: 0px; */
     padding-bottom: 0px;
   }
-  
-  /*--------------------------------------------------------------
-  # Portfolio
-  --------------------------------------------------------------*/
-  /* .portfolio #portfolio-flters {
-    list-style: none;
-    margin-bottom: 20px;
-  }
-  
-  .portfolio #portfolio-flters li {
-    cursor: pointer;
-    display: inline-block;
-    margin: 0 0 10px 10px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1;
-    text-transform: uppercase;
-    color: #444444;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .portfolio #portfolio-flters li::before {
-    content: "[";
-    margin-right: 6px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 400;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .portfolio #portfolio-flters li::after {
-    content: "]";
-    margin-left: 6px;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 400;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
-    color: #ef6603;
-  }
-  
-  .portfolio #portfolio-flters li.filter-active::before, .portfolio #portfolio-flters li.filter-active::after {
-    color: #ef6603;
-  }
-  
-  .portfolio .portfolio-item {
-    margin-bottom: 30px;
-  }
-  
-  .portfolio .portfolio-item .portfolio-img {
-    overflow: hidden;
-  }
-  
-  .portfolio .portfolio-item .portfolio-img img {
-    transition: all 0.8s ease-in-out;
-  }
-  
-  .portfolio .portfolio-item .portfolio-info {
-    opacity: 0;
-    position: absolute;
-    left: 15px;
-    bottom: 0;
-    z-index: 3;
-    right: 15px;
-    transition: all ease-in-out 0.3s;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 10px 15px;
-  }
-  
-  .portfolio .portfolio-item .portfolio-info h4 {
-    font-size: 18px;
-    color: #fff;
-    font-weight: 600;
-    color: #fff;
-    margin-bottom: 0px;
-  }
-  
-  .portfolio .portfolio-item .portfolio-info p {
-    color: #fedac0;
-    font-size: 14px;
-    margin-bottom: 0;
-  }
-  
-  .portfolio .portfolio-item .portfolio-info .preview-link, .portfolio .portfolio-item .portfolio-info .details-link {
-    position: absolute;
-    right: 40px;
-    font-size: 24px;
-    top: calc(50% - 18px);
-    color: #fff;
-    transition: 0.3s;
-  }
-  
-  .portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-    color: #fd9f5b;
-  }
-  
-  .portfolio .portfolio-item .portfolio-info .details-link {
-    right: 10px;
-  }
-  
-  .portfolio .portfolio-item .portfolio-links {
-    opacity: 0;
-    left: 0;
-    right: 0;
-    text-align: center;
-    z-index: 3;
-    position: absolute;
-    transition: all ease-in-out 0.3s;
-  }
-  
-  .portfolio .portfolio-item .portfolio-links a {
-    color: #fff;
-    margin: 0 2px;
-    font-size: 28px;
-    display: inline-block;
-    transition: 0.3s;
-  }
-  
-  .portfolio .portfolio-item .portfolio-links a:hover {
-    color: #fd9f5b;
-  }
-  
-  .portfolio .portfolio-item:hover .portfolio-img img {
-    transform: scale(1.2);
-  }
-  
-  .portfolio .portfolio-item:hover .portfolio-info {
-    opacity: 1;
-  } */
-  
-  /*--------------------------------------------------------------
-  # Testimonials
-  --------------------------------------------------------------*/
-  /* .testimonials .testimonial-item {
-    box-sizing: content-box;
-    padding: 30px 30px 0 30px;
-    margin: 30px 15px;
-    text-align: center;
-    min-height: 350px;
-    box-shadow: 0px 2px 12px rgba(0, 0, 0, 0.08);
-  }
-  
-  .testimonials .testimonial-item .testimonial-img {
-    width: 90px;
-    border-radius: 50%;
-    border: 4px solid #fff;
-    margin: 0 auto;
-  }
-  
-  .testimonials .testimonial-item h3 {
-    font-size: 18px;
-    font-weight: bold;
-    margin: 10px 0 5px 0;
-    color: #111;
-  }
-  
-  .testimonials .testimonial-item h4 {
-    font-size: 14px;
-    color: #999;
-    margin: 0;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-left, .testimonials .testimonial-item .quote-icon-right {
-    color: #fedac0;
-    font-size: 26px;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-left {
-    display: inline-block;
-    left: -5px;
-    position: relative;
-  }
-  
-  .testimonials .testimonial-item .quote-icon-right {
-    display: inline-block;
-    right: -5px;
-    position: relative;
-    top: 10px;
-  }
-  
-  .testimonials .testimonial-item p {
-    font-style: italic;
-    margin: 0 auto 15px auto;
-  }
-  
-  .testimonials .owl-nav, .testimonials .owl-dots {
-    margin-top: 5px;
-    text-align: center;
-  }
-  
-  .testimonials .owl-dot {
-    display: inline-block;
-    margin: 0 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #ddd !important;
-  }
-  
-  .testimonials .owl-dot.active {
-    background-color: #ef6603 !important;
-  }
-  
-  @media (max-width: 767px) {
-    .testimonials {
-      margin: 30px 10px;
-    }
-  } */
 
   /* globe */
   .globe {
@@ -1152,7 +849,6 @@ a:hover {
     font-size: 36px;
     color: #1A76D2;
     font-weight: 400;
-    font-family: "Poppins", sans-serif;
     margin-bottom: 20px;
   }
   
@@ -1212,7 +908,6 @@ a:hover {
     transition: none;
     font-size: 16px;
     font-weight: 400;
-    font-family: "Nunito", sans-serif;
     font-weight: 600;
     transition: 0.3s;
     border: 1px solid #E8EDFA;
@@ -1292,142 +987,6 @@ a:hover {
       display: flex;
       justify-content: center;
     }
-  }
-  
-  /*--------------------------------------------------------------
-  # F.A.Q
-  --------------------------------------------------------------*/
-  .faq {
-    padding: 60px 0;
-  }
-  
-  .faq .faq-list {
-    padding: 0;
-    list-style: none;
-  }
-  
-  .faq .faq-list li {
-    padding: 0 0 20px 25px;
-  }
-  
-  .faq .faq-list a {
-    display: block;
-    position: relative;
-    font-family: #ef6603;
-    font-size: 18px;
-    font-weight: 500;
-    cursor: pointer;
-  }
-  
-  .faq .faq-list i {
-    font-size: 18px;
-    position: absolute;
-    left: -25px;
-    top: 6px;
-  }
-  
-  .faq .faq-list p {
-    margin-bottom: 20px;
-    font-size: 15px;
-  }
-  
-  .faq .faq-list a.collapse {
-    color: #ef6603;
-  }
-  
-  .faq .faq-list a.collapsed {
-    color: #343a40;
-  }
-  
-  .faq .faq-list a.collapsed:hover {
-    color: #ef6603;
-  }
-  
-  .faq .faq-list a.collapsed i::before {
-    content: "\eab2" !important;
-  }
-  
-  /*--------------------------------------------------------------
-  # Team
-  --------------------------------------------------------------*/
-  .team {
-    background: #fff;
-    padding: 60px 0;
-  }
-  
-  .team .member {
-    margin-bottom: 20px;
-    overflow: hidden;
-    border-radius: 5px;
-    background: #fff;
-    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
-  }
-  
-  .team .member .member-img {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  .team .member .social {
-    position: absolute;
-    left: 0;
-    bottom: 30px;
-    right: 0;
-    opacity: 0;
-    transition: ease-in-out 0.3s;
-    text-align: center;
-  }
-  
-  .team .member .social a {
-    transition: color 0.3s;
-    color: #2a2c39;
-    margin: 0 3px;
-    padding-top: 7px;
-    border-radius: 50px;
-    width: 36px;
-    height: 36px;
-    background: rgba(239, 102, 3, 0.8);
-    display: inline-block;
-    transition: ease-in-out 0.3s;
-    color: #fff;
-  }
-  
-  .team .member .social a:hover {
-    background: #fc8129;
-  }
-  
-  .team .member .social i {
-    font-size: 18px;
-  }
-  
-  .team .member .member-info {
-    padding: 25px 15px;
-  }
-  
-  .team .member .member-info h4 {
-    font-weight: 700;
-    margin-bottom: 5px;
-    font-size: 18px;
-    color: #2a2c39;
-  }
-  
-  .team .member .member-info span {
-    display: block;
-    font-size: 13px;
-    font-weight: 400;
-    color: #aaaaaa;
-  }
-  
-  .team .member .member-info p {
-    font-style: italic;
-    font-size: 14px;
-    line-height: 26px;
-    color: #777777;
-  }
-  
-  .team .member:hover .social {
-    opacity: 1;
-    bottom: 15px;
   }
   
   /*--------------------------------------------------------------
