Adjust services hover to stop carousel and leave to play

--- a/assets/css/cooperationCarousel.css
+++ b/assets/css/cooperationCarousel.css
@@ -136,7 +136,7 @@
     /* font-size: 1vw; */
     font-size: 2px;
     color: #66757f;
-    text-indent: 30px;
+    /* text-indent: 30px; */
 }
 
 .cooperation .galleryCooperationItem img {
