--- a/assets/css/cooperationCarousel.css
+++ b/assets/css/cooperationCarousel.css
@@ -435,7 +435,7 @@
     .cooperation .galleryCooperationItem.gallery-item-selected {
         width: 80%;
         /* height: 100%; */
-        height: 280px;
+        height: 300px;
         opacity: 1;
     }
 
@@ -515,10 +515,14 @@
 
 @media (max-width: 450px) {
     .cooperation .galleryCooperationItem.gallery-item-selected {
-        height: 350px;
+        height: 400px;
     }
     .cooperation .galleryCooperationTitleItemContent {
-        height: 26%;
+        height: 30%;
+    }
+
+    .cooperation .galleryCooperationItem.gallery-item-selected h2 {
+        font-size: 25px;
     }
     .cooperation .galleryCooperationControls {
         top: 83%;
@@ -531,16 +535,15 @@
     }
 
     .cooperation .galleryCooperationItem.gallery-item-selected {
-        height: 390px;
+        height: 420px;
     }
 
     .cooperation .galleryCooperationTitleItemContent {
-        height: 18%;
+        height: 20%;
     }
 
     .cooperation .galleryCooperationItem.gallery-item-selected h2 {
-        font-size: 20px;
-        font-weight: bold;
+        font-size: 18px;
     }
 
     .cooperation .galleryCooperationControls {
