--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1011,6 +1011,7 @@ a:hover {
 
     /* width: 100%;
     height: 200px; */
+    clip:rect(0px,550px,232px,0px);
   }
 
   .pricing .pricingSubContentColumn {
@@ -1043,12 +1044,13 @@ a:hover {
     justify-content: space-between;
     align-items: center;
     width: 300px;
+    margin-top: 14px;
   }
 
   .pricing .detailButton {
     background: linear-gradient(to bottom, #80c3f3, #4a90e2);
     border: 1px solid transparent;
-    padding: 10px 30px;
+    padding: 10px 40px;
     color: #fff;
     transition: 0.4s;
     border-radius: 24px;
@@ -1106,6 +1108,10 @@ a:hover {
 
     .pricing .box {
       width: auto;
+    }
+
+    .pricing img {
+      margin-top: -30px;
     }
   }
 
